# business-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py
app/bot/: bot.py  cart_storage.py  middlewares.py  notify.py  states.py
app/bot/handlers/: cart.py  catalog.py  orders.py  start.py
app/bot/keyboards/: common.py
app/db/: models.py  repositories.py  session.py
app/parser/: products_parser.py  sample_menu.html
app/services/: cart.py  catalog.py  orders.py
app/web/: app.py  security.py  views.py
app/web/routes/: auth.py  panel.py
app/web/static/: animations.css  animations.js  style.css
app/web/templates/: base.html  broadcast.html  dashboard.html  login.html  order_detail.html  orders.html  products.html
scripts/: screenshot.py  seed_demo.py
tests/: conftest.py  test_cart.py  test_parser.py  test_services.py  test_web.py
